fix font weight rendering issues on safari

--- a/src/style/Base/Type.scss
+++ b/src/style/Base/Type.scss
@@ -103,6 +103,7 @@ u {
 
 strong {
 	font-family: 'Relative Bold';
+	font-weight: 400;
 }
 
 h1, h2, h3, p, a, u, strong {
