--- a/src/style/Pages/ProjectPage.scss
+++ b/src/style/Pages/ProjectPage.scss
@@ -66,10 +66,12 @@
 
 .section-header {
   font-family: 'Relative Medium';
+  font-weight: 500;
 }
 
 .section-subheader {
   font-family: 'Relative Bold';
+  font-weight: 600;
   color: $body-copy;
 }
 
